feat: Access home page without authentication. Remove frictions in forms.
