# blitter-api/src/main/resources/openapi-blitter-0.2.0-resolved.yaml
@@ -37,6 +37,40 @@ paths:
       responses:
         default:
           description: Successful operation
+  /all:
+    get:
+      tags:
+        - Bleats
+      summary: Get a list of bleats
+      description: Returns a list of bleats with pagination
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: The page number to retrieve (defaults to 1)
+        - in: query
+          name: per_page
+          schema:
+            type: integer
+            default: 10
+          description: The number of items per page to retrieve (defaults to 10)
+        - in: query
+          name: feed_type
+          schema:
+            type: string
+            enum: [home, feed]
+      operationId: getBleatsAll
+      responses:
+        "200":
+          description: A list of bleats
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PaginatedBleats"
+        "500":
+          description: Internal server error
   /bleats:
     get:
       tags:
@@ -56,6 +90,11 @@ paths:
             type: integer
             default: 10
           description: The number of items per page to retrieve (defaults to 10)
+        - in: query
+          name: feed_type
+          schema:
+            type: string
+            enum: [home, feed]
       operationId: getBleats
       responses:
         "200":
@@ -63,19 +102,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  bleats:
-                    $ref: "#/components/schemas/BleatsRes"
-                  page:
-                    type: integer
-                  per_page:
-                    type: integer
-                  total_pages:
-                    type: integer
-                  total_bleats:
-                    type: integer
-                    format: int64
+                $ref: "#/components/schemas/PaginatedBleats"
         "500":
           description: Internal server error
     post:
@@ -444,6 +471,20 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/BleatRes"
+    PaginatedBleats:
+      type: object
+      properties:
+        bleats:
+          $ref: "#/components/schemas/BleatsRes"
+        page:
+          type: integer
+        per_page:
+          type: integer
+        total_pages:
+          type: integer
+        total_bleats:
+          type: integer
+          format: int64
     AuthorRes:
       type: object
       properties:
